// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contract should create request 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{6EB0825380011F6E292AB9FE5825731C5F568DB15E68F69707390F1976DA6A7F173916703B9_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(owner)",
          "to": "@safe",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8027n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "empty",
            },
            "bounce": true,
            "from": "@safe",
            "to": "@treasure(owner)",
            "type": "internal",
            "value": "0.990973",
          },
        ],
      },
    ],
  },
]
`;

exports[`contract should create request 2`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{348B938F004_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(owner)",
          "to": "@safe",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15755n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{561376150000000000000000}",
              "type": "cell",
            },
            "bounce": true,
            "from": "@safe",
            "to": "kQDoW8_xse1Qzm1RCaW9cvhfkbR25IXVorhoz779sd8vjnWY",
            "type": "internal",
            "value": "0.9648",
          },
        ],
      },
    ],
  },
]
`;

exports[`contract should create vote: deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{561376150000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(safe)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6251n,
      },
    ],
  },
]
`;

exports[`contract should create vote: double vote 1`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.00000001",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "YES",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(owner1)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "failed",
        "errorCode": 3094,
        "errorMessage": "Already signed or not an owner",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF00000000594553}",
            "type": "cell",
          },
          "bounce": false,
          "from": "@signer",
          "to": "@treasure(owner1)",
          "type": "internal",
          "value": "0.993627",
        },
      },
    ],
  },
]
`;

exports[`contract should create vote: invalid vote 1`] = `
[
  {
    "$seq": 3,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.00000001",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "YES",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(unknown)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "failed",
        "errorCode": 3094,
        "errorMessage": "Already signed or not an owner",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF00000000594553}",
            "type": "cell",
          },
          "bounce": false,
          "from": "@signer",
          "to": "@treasure(unknown)",
          "type": "internal",
          "value": "0.993627",
        },
      },
    ],
  },
]
`;

exports[`contract should create vote: vote 1`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.00000001",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "YES",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(owner1)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14370n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{9DC5D639C00AB084690786D4F70011428E4B6BC532BFB47076AC4855DC7DA8144B22F85364F}",
              "type": "cell",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Vote accepted",
              "type": "text",
            },
            "bounce": false,
            "from": "@signer",
            "to": "@treasure(owner1)",
            "type": "internal",
            "value": "0.984394",
          },
        ],
      },
    ],
  },
]
`;

exports[`contract should create vote: vote 2`] = `
[
  {
    "$seq": 4,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.00000001",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "YES",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(owner2)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 19728n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{9DC5D639C000221528D67B5DFE51431A4453FDEA766A6642F184A3A3C5C6F16CC89465AB1EC}",
              "type": "cell",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Vote accepted",
              "type": "text",
            },
            "bounce": false,
            "from": "@signer",
            "to": "@treasure(owner2)",
            "type": "internal",
            "value": "0.979036",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{E7E1407CC_}",
              "type": "cell",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{9A69710D800AB60B6F3F99430109C97E1BE903020AA7211D122BF269A5ECE534A6217AE119500000002000000020000000000002AF8004_}
 x{817002_}
  x{BFC110A946B3DAEFF28A18D2229FEF53B35332178C251D1E2E378B6644A32D58F66_}
  x{BFD58423483C36A7B8008A14725B5E2995FDA383B56242AEE3ED40A25917C29B27E_}",
              "type": "cell",
            },
            "bounce": false,
            "from": "@signer",
            "to": "@treasure(safe)",
            "type": "internal",
            "value": "0.98742496",
          },
        ],
      },
    ],
  },
]
`;

exports[`contract should deploy correctly 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(owner)",
          "to": "@deployer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8186n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{AFF90F570000000000000000}",
              "type": "cell",
            },
            "bounce": false,
            "from": "@deployer",
            "to": "@treasure(owner)",
            "type": "internal",
            "value": "0.990618",
          },
        ],
      },
    ],
  },
]
`;

exports[`contract should fail vote: after completed 1`] = `
[
  {
    "$seq": 5,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "NO",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(owner3)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "failed",
        "errorCode": 40810,
        "errorMessage": "Completed",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF000000004E4F}",
            "type": "cell",
          },
          "bounce": false,
          "from": "@signer",
          "to": "@treasure(owner3)",
          "type": "internal",
          "value": "0.994094",
        },
      },
    ],
  },
]
`;

exports[`contract should fail vote: deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{561376150000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(safe)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6251n,
      },
    ],
  },
]
`;

exports[`contract should fail vote: double vote 1`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.00000001",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "NO",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(owner1)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "failed",
        "errorCode": 3094,
        "errorMessage": "Already signed or not an owner",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF000000004E4F}",
            "type": "cell",
          },
          "bounce": false,
          "from": "@signer",
          "to": "@treasure(owner1)",
          "type": "internal",
          "value": "0.993524",
        },
      },
    ],
  },
]
`;

exports[`contract should fail vote: invalid vote 1`] = `
[
  {
    "$seq": 3,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.00000001",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "NO",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(unknown)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "failed",
        "errorCode": 3094,
        "errorMessage": "Already signed or not an owner",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF000000004E4F}",
            "type": "cell",
          },
          "bounce": false,
          "from": "@signer",
          "to": "@treasure(unknown)",
          "type": "internal",
          "value": "0.993524",
        },
      },
    ],
  },
]
`;

exports[`contract should fail vote: vote 1`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.00000001",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "NO",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(owner1)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14509n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{9DC5D639400AB084690786D4F70011428E4B6BC532BFB47076AC4855DC7DA8144B22F85364F}",
              "type": "cell",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Vote accepted",
              "type": "text",
            },
            "bounce": false,
            "from": "@signer",
            "to": "@treasure(owner1)",
            "type": "internal",
            "value": "0.984255",
          },
        ],
      },
    ],
  },
]
`;

exports[`contract should fail vote: vote 2`] = `
[
  {
    "$seq": 4,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.00000001",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "NO",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(owner2)",
          "to": "@signer",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 19767n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{9DC5D6394000221528D67B5DFE51431A4453FDEA766A6642F184A3A3C5C6F16CC89465AB1EC}",
              "type": "cell",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Vote accepted",
              "type": "text",
            },
            "bounce": false,
            "from": "@signer",
            "to": "@treasure(owner2)",
            "type": "internal",
            "value": "0.978997",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{E7E1407C4_}",
              "type": "cell",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{18BE0C6B800AB60B6F3F99430109C97E1BE903020AA7211D122BF269A5ECE534A6217AE119500000003000000020000000000002AF8004_}
 x{817002_}
  x{BFC110A946B3DAEFF28A18D2229FEF53B35332178C251D1E2E378B6644A32D58F66_}
  x{BFD58423483C36A7B8008A14725B5E2995FDA383B56242AEE3ED40A25917C29B27E_}",
              "type": "cell",
            },
            "bounce": false,
            "from": "@signer",
            "to": "@treasure(safe)",
            "type": "internal",
            "value": "0.98742496",
          },
        ],
      },
    ],
  },
]
`;
